# lazy-scheduler

./: Cargo.toml  tasks.json
settings/: overrides.yaml  settings.yaml
settings/schedule/: 2025-05-04.yaml  2025-05-07.yaml  2025-05-08.yaml
src/: core.rs  main.rs  shell.rs
src/core/: calendar.rs  deadline.rs  estimate.rs  schedule.rs  session.rs  slot.rs  store.rs  task.rs  utils.rs  work.rs  work_log.rs
