[package]
name = "lazy-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
regex = "1.11.1"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
